--- a/starter/sass/components/_story.scss
+++ b/starter/sass/components/_story.scss
@@ -9,7 +9,17 @@
     font-size: $default-font-size;
     transform: skewX(-12deg);
 
+    @include respond(tab-port) {
+        width: 100%;
+        padding: 4rem;
+        padding-left: 7rem;
 
+    }
+
+    @include respond(phone) {
+        transform: skewX(0);
+
+    }
 
     &__shape {
         width: 15rem;
@@ -22,6 +32,11 @@
         transform: translateX(-3rem) skewX(12deg);
         position: relative;
         overflow: hidden;
+
+        @include respond(phone) {
+            transform: translateX(-3rem) skewX(0);
+            
+        }
    
     }
 
@@ -33,7 +48,11 @@
     }
 
     &__text {
-        transform: skewX(12deg)
+        transform: skewX(12deg);
+
+        @include respond(phone) {
+            transform: skew(0);
+        }
     }
 
     &__caption {
@@ -58,7 +77,5 @@
     &:hover &__img {
         transform: translateX(-4rem) scale(1.0);
         filter: brightness(80%) blur(3px) ;
-        
-
     }
 }
