--- a/starter/sass/layout/_navigation.scss
+++ b/starter/sass/layout/_navigation.scss
@@ -19,7 +19,7 @@
         cursor: pointer;
 
         @include respond(tab-port) {
-            top: 4rem;
+            top: 2rem;
             right: 4rem;
         }
         @include respond(phone) {
@@ -40,13 +40,13 @@
         transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
 
         @include respond(tab-port) {
-            top: 4.5rem;
+            top: 2.5rem;
             right: 4.5rem;
         }
 
         @include respond(phone) {
-            top: 3rem;
-            right: 3rem;
+            top: 3.5rem;
+            right: 3.5rem;
         }
     }
 
